# ICM42688

./: CMakeLists.txt  LICENSE  README.md
CUI_demo/: CMakeLists.txt  calibration.cpp  clock.cpp  main.cpp
CUI_tests/: CMakeLists.txt  main.cpp
GUI_demo/: CMakeLists.txt
GUI_demo/RTIMULibDemoGL/: CMakeLists.txt  IMUThread.cpp  IMUThread.h  RTIMULibDemoGL.cpp  RTIMULibDemoGL.h  RTIMULibDemoGL.ui
GUI_demo/RTIMULibGL/: CMakeLists.txt
GUI_tests/RTIMULibDemoGL/: CMakeLists.txt  IMUThread.h
GUI_tests/RTIMULibGL/: CMakeLists.txt  IMUView.cpp  IMUView.h
src/: CMakeLists.txt  Fusion.cpp  Fusion.hpp  HAL.cpp  HAL.hpp  ICM42688.cpp  ICM42688.hpp  ICM42688Defs.hpp  IMU.cpp  IMU.hpp  IMUMath.cpp  IMUMath.hpp  Settings.cpp  Settings.hpp  spidev_lib.cpp  spidev_lib.hpp
