SET(DEMO_SRCS
    RTIMULibDemoGL.cpp
    IMUThread.cpp
    main.cpp)


SET(CMAKE_AUTOMOC ON)

SET(EXTRA_LIBS GL)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
qt5_wrap_ui(UI_HEADERS RTIMULibDemoGL.ui)
ADD_EXECUTABLE(RTIMULibDemoGL ${DEMO_SRCS} ${UI_HEADERS} ${GL_HEADERS})
target_include_directories(RTIMULibDemoGL PUBLIC ${CMAKE_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
TARGET_LINK_LIBRARIES(RTIMULibDemoGL ICM42688_Lib RTIMULibGL ${EXTRA_LIBS})
qt5_use_modules(RTIMULibDemoGL Widgets Gui)
INSTALL(TARGETS RTIMULibDemoGL DESTINATION bin)