SET(DEMO_SRCS
    RTIMULibDemoGL.cpp
    IMUThread.cpp
    main.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_AUTOMOC ON)

SET(EXTRA_LIBS GL)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
qt5_wrap_ui(UI_HEADERS RTIMULibDemoGL.ui)
ADD_EXECUTABLE(RTIMULibDemoGL ${DEMO_SRCS} ${UI_HEADERS} ${GL_HEADERS})
TARGET_LINK_LIBRARIES(RTIMULibDemoGL IMULIB RTIMULibGL ${EXTRA_LIBS})
qt5_use_modules(RTIMULibDemoGL Widgets Gui)
INSTALL(TARGETS RTIMULibDemoGL DESTINATION bin)