SET(LIBGL_SRCS
    IMUView.cpp)

SET(GL_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLADSShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLADSTextureShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGL.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLCylinderComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLDiskComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLFlatShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLPlaneComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLSphereComponent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLTextureShader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib/QtGLWireCubeComponent.cpp)

SET(VRIMU_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/VRWidgetLib/VRIMUWidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VRWidgetLib/VRWidget.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/QtGLLib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/VRWidgetLib)


SET(CMAKE_AUTOMOC ON)

IF(WIN32)
    SET(EXTRA_LIBS opengl32)
ENDIF(WIN32)
IF (UNIX AND (NOT APPLE))
    SET(EXTRA_LIBS GL)
ENDIF(UNIX AND (NOT APPLE))

    FIND_PACKAGE(Qt5Widgets REQUIRED)
    FIND_PACKAGE(Qt5Core REQUIRED)
    FIND_PACKAGE(Qt5OpenGL REQUIRED)
    FIND_PACKAGE(Qt5Gui REQUIRED)
    qt5_add_resources(RCC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/VRWidgetLib/VRWidgetLib.qrc)
    IF(WIN32)
        ADD_LIBRARY(RTIMULibGL STATIC ${LIBGL_SRCS} ${GL_SRCS} ${VRIMU_SRCS} ${GL_HEADERS} ${RCC_HEADERS})
    ELSE(WIN32)
        ADD_LIBRARY(RTIMULibGL SHARED ${LIBGL_SRCS} ${GL_SRCS} ${VRIMU_SRCS} ${GL_HEADERS} ${RCC_HEADERS})
        SET_PROPERTY(TARGET RTIMULibGL PROPERTY VERSION ${RTIMULIB_VERSION})
        SET_PROPERTY(TARGET RTIMULibGL PROPERTY SOVERSION ${RTIMULIB_VERSION_MAJOR})
    ENDIF(WIN32)
    TARGET_LINK_LIBRARIES(RTIMULibGL
        RTIMULib 
        ${Qt5Gui_OPENGL_LIBRARIES} ${Qt5Core_QTMAIN_LIBRARIES} ${EXTRA_LIBS})
    qt5_use_modules(RTIMULibGL Widgets Core OpenGL)
    INSTALL(TARGETS RTIMULibGL DESTINATION lib)